# crabfit-backend/routes/getEvent.js
@@ -1,21 +1,19 @@
-module.exports = (req, res) => {
+module.exports = async (req, res) => {
 	const { eventId } = req.params;
 
-	if (eventId) {
-		res.send({
-			id: 'event-name-4701240',
-			name: 'Event name',
-			eventCreated: 379642017932,
-			timezone: '247',
-			startTime: 0900,
-			endTime: 1700,
-			dates: [
-				'26022021',
-				'27022021',
-				'28022021',
-			],
-		});
-	} else {
+	try {
+		const event = (await req.datastore.get(req.datastore.key(['Event', eventId])))[0];
+
+		if (event) {
+			res.send({
+				id: eventId,
+				...event,
+			});
+		} else {
+			res.sendStatus(404);
+		}
+	} catch (e) {
+		console.error(e);
 		res.sendStatus(404);
 	}
 };
